nginx-k8s-static-site-istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtualservice 
  namespace: xxx
spec:
  hosts:
  - "example.com" # Server DNS Name
  gateways:
  - istio-system/default-gateway # Refer to the default gateway by its FQDN
  http:
  - match:
    - uri:
        prefix: /nginx
    route:
    - destination:
        host: nginx-service
        port:
          number: 80
